--- a/estilo.css
+++ b/estilo.css
@@ -113,5 +113,13 @@ body{
 }
 .formulario{
 	margin-top: 30px;
+	width: 500px;
+}
+.for{
+	font-family: "Nunito";
+	font-size: 18px;
+	font-weight: 400;
+	display: block;
+	color: white;
 	
 }
