--- a/estilo.css
+++ b/estilo.css
@@ -114,6 +114,7 @@ body{
 .formulario{
 	margin-top: 30px;
 	width: 500px;
+	
 }
 .for{
 	font-family: "Nunito";
@@ -121,5 +122,5 @@ body{
 	font-weight: 400;
 	display: block;
 	color: white;
-	
 }
+.
